argocd/base/pocket-id/forward-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  namespace: pocket-id
spec:
  type: ClusterIP
  selector:
    app: traefik-forward-auth
  ports:
    - port: 4181
      targetPort: 4181
