argocd/base/pocket-id/forward-auth-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forward-auth-callback
  namespace: pocket-id
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.streamixs.com`) && PathPrefix(`/_oauth`)
      kind: Rule
      middlewares:
        - name: pocket-id-auth
          namespace: pocket-id
      services:
        - name: traefik-forward-auth
          port: 4181
  tls: {}
