argocd/base/pocket-id/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.streamixs.com`)
      kind: Rule
      services:
        - name: pocket-id
          port: 1411
  tls: {}
